# prometheus_ai

./: .gitignore  README.md  main.py  pyproject.toml  test.py  test_pyaudio.py
data/: data_manip.py  generate_data.py
logs/: benchmark_results_Qwen3_0.6B_100_20250806_135145.json  benchmark_results_Qwen3_0.6B_100_20250806_140236.json  benchmark_results_Qwen3_0.6B_100_20250806_142052.json  benchmark_results_Qwen3_0.6B_10_20250806_063909.jsonl  benchmark_results_Qwen3_0.6B_10_20250806_122529.jsonl  benchmark_results_Qwen3_0.6B_10_20250806_122916.jsonl  benchmark_results_Qwen3_0.6B_10_20250806_131838.jsonl  benchmark_results_Qwen3_0.6B_10_20250806_134934.json  benchmark_results_Qwen3_0.6B_10_20250806_215238.json  benchmark_results_Qwen3_0.6B_10_20250807_123643.json  benchmark_results_Qwen3_0.6B_10_20250807_124056.json  benchmark_results_Qwen3_0.6B_10_20250807_133831.json  benchmark_results_Qwen3_0.6B_10_20250807_135458.json  benchmark_results_Qwen3_0.6B_10_20250807_140618.json  benchmark_results_Qwen3_0.6B_10_20250807_141500.json  benchmark_results_Qwen3_0.6B_400_20250807_143515.json  benchmark_results_Qwen3_0.6B_5_20250806_194355.json  benchmark_results_Qwen3_0.6B_5_20250806_203304.json  benchmark_results_Qwen3_0.6B_5_20250806_205331.json  benchmark_results_Qwen3_0.6B_5_20250806_212645.json
prometheus_ai/: MULTI_BENCHMARK_USAGE.md  __init__.py  benchmarking.py  prometheus_ai.py
prometheus_ai/benchmarking/: README.md  benchmarking.md  benchmarking.py  multi_benchmark.py
prometheus_ai/data/: data_manip.py  generate_data.py
prometheus_ai/utils/: __init__.py  (+2 more)
(+151 files in other folders)
